# gameTest-Lantern

./: .gitignore  CMakeLists.txt  LICENSE  README.md  animation.cpp  animation.h  entity.cpp  entity.h  gameTest-Lantern.kdev4  lantern.cpp  lantern.h  light.cpp  light.h  main.cpp  object.cpp  object.h  player.cpp  player.h  tilemap.cpp  tilemap.h
assets/sprites/: spritesheet.aseprite
